# fork-plugin

./: .clang-tidy  .gitignore  BUILD  CMakeLists.txt  README  README.md  todo
.ci/: run
debian/: changelog  control  rules
doc/: KeyRepetition.md  fork-install.md  fork.md  kbfiltr.cer  kbfiltr.txt  porting-to-weston.md  windows-client-install.md  windows-development.md  windows-recovery.md  windows-registry.md  windows.md  xlicense.md
include/: archived_event.h  config.h  empty_last.h  fork_enums.h  fork_requests.h
libinput/: CMakeLists.txt  fork-plugin.cpp  libinput_environment.h
src/: CMakeLists.txt  circular.h  colors.h  config.h  configure.cpp  configure.h  debug.cpp  debug.h  event_ops.cpp  event_ops.h  fork-plugin.cpp  fork.cpp  fork.h  fork_configuration.h  history.cpp  history.h  lock.h  machine.cpp  machine.h  memory.h  platform.h  queue.h  triqueue.h  xmachine.cpp  xmachine.h  xorg.h
test/: CMakeLists.txt  debug.h  test-circular.cpp  test-machine.cpp  test-queue.cpp  test-triqueue.cpp
windows/: CMakeLists.txt  README.md  build.bat  done  import  kbfiltr.sln  main.cpp  my-memory.h  readme.mmc.txt  todo  win-environment.h
windows/exe/: kbftest.c  kbftest.cpp  kbftest.vcxproj  kbftest.vcxproj.Filters
windows/scripts/: build-install-keylayouts.bat  build-install.bat  copy-over.bat  delete.bat  info.bat  install-cert.bat  install-driver.bat  reg-filtr.bat  reg-layout.bat  remove-old-copies.bat
windows/sys/: kbfiltr.c  kbfiltr.cpp  kbfiltr.h  kbfiltr.inx  kbfiltr.vcxproj  kbfiltr.vcxproj.Filters  public.h  rawpdo.c  rawpdo.cpp
xorg/: CMakeLists.txt  event_ops.h  fork-plugin.cpp  xmachine.cpp  xmachine.h  xorg.h
